--- a/Firmware/ESP32/.vscode/settings.json
+++ b/Firmware/ESP32/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "idf.port": "/dev/cu.usbserial-0001"
+    "idf.portWin": "COM6",
+    "idf.adapterTargetName": "esp32",
+    "idf.openOcdConfigs": [
+        "interface/ftdi/esp32_devkitj_v1.cfg",
+        "target/esp32.cfg"
+    ],
 }
